--- a/VRChat/40/1173640.html
+++ b/VRChat/40/1173640.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "Ek0Fvg/5vsIlh21LUrswRowMdtZF6rMQpT4rPUY04Us="></script>
+    "3G2gh7T+3gsX/kVyntHFcgdlKlqsxG8/yTc2VS3KFbA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"セーラー服５色セット（青、紫、オレンジ、白、黒）『VRoid用テクスチャ』","description":"⚠️注意⚠️\n\n過去一度も単品商品を購入をしたことが無いかたは。\n【通常ファイル】の方をダウンロードしてください。\n【パス付きzip：単品購入者特典】の方は、単品商品を購入したかた限定です。\n単品購入↓\nhttps://isekaiinuko.booth.pm/items/1168051\n単品購入者限定で付点しています【セット用特別割引パス】を入力してご利用ください。\n\n自己責任でお願いいたします。\nくれぐれも購入間違いにはお気を付けください。\n\n【購入した商品の利用は自由です】\n『再配布』することは禁止ですが、それ以外の制限はとくにございません。\nVRoid制作はもちろん。\nUnity経由でVRchatへ。\n変換してMMDやその他への流用。\nゲーム制作や改変しての使用などなど。\nご自由にお使いください！\nクレジット表記は出来ればお願いしたいです。\n何か理由があって入れれない場合は大丈夫です。\n\n基本の色は無料でご利用いただけます。\nどうぞご利用ください。\nhttps://isekaiinuko.booth.pm/items/1168051\n\n使用方法が分からない方は\n同封の取り扱い説明書をご覧ください。\n\n追記。\nショップ、ツイッターのフォロー、ハートマークのプッシュをお願いします！\nリツイートやいいねも待ってます！\n制作者の励みになります！\n↓こちらだよ(≧∇≦)\nhttps://twitter.com/Isekaiinuko?s=09\n\nそれとツイートの際は是非\n#犬子屋 と書いてツイートしください。\n拝見させていただきます！","url":"https://booth.pm/ja/items/1173640","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"250","highPrice":"400"},"image":"https://booth.pximg.net/c/620x620/f22bc1b2-b53f-45cb-ab46-6930cde3bab7/i/1173640/1ecad4fd-8031-486a-b016-599de043a4a3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ek0Fvg/5vsIlh21LUrswRowMdtZF6rMQpT4rPUY04Us="></script>
+    nonce="3G2gh7T+3gsX/kVyntHFcgdlKlqsxG8/yTc2VS3KFbA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -653,7 +653,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
